// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Halo Basic 1`] = `
<div
  className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-default psds-halo--visible-on-focus"
>
  <div />
</div>
`;

exports[`Storyshots Components/Halo Error 1`] = `
<div
  className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-default psds-halo--error psds-halo--visible-on-focus"
>
  <div />
</div>
`;

exports[`Storyshots Components/Halo Gap Sizes 1`] = `
<div
  data-css-1gfhbu8=""
>
  <div
    className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-default psds-halo--visible psds-halo--visible-on-focus"
  >
    <div>
      default
    </div>
  </div>
  <div
    className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible psds-halo--visible-on-focus"
  >
    <div>
      small
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Halo Not Visible On Focus 1`] = `
<div
  className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-default"
>
  <div />
</div>
`;

exports[`Storyshots Components/Halo Shapes 1`] = `
<div
  data-css-1gfhbu8=""
>
  <div
    className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-default psds-halo--visible psds-halo--visible-on-focus"
  >
    <div>
      default
    </div>
  </div>
  <div
    className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--visible psds-halo--visible-on-focus"
  >
    <div>
      pill
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Halo Visible 1`] = `
<div
  className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-default psds-halo--visible psds-halo--visible-on-focus"
>
  <div />
</div>
`;
